@@ -5,18 +5,9 @@ import java.util.Set;
 import org.junit.Before;
 import org.junit.Test;
 
-import de.uni_freiburg.informatik.ultimate.automata.AutomataLibraryException;
 import de.uni_freiburg.informatik.ultimate.automata.AutomataLibraryServices;
 import de.uni_freiburg.informatik.ultimate.automata.AutomataOperationCanceledException;
-import de.uni_freiburg.informatik.ultimate.automata.Word;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.NestedWord;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.NestedWordAutomaton;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.VpAlphabet;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.buchi.BuchiAccepts;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.buchi.GetAcceptedLassoWord;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.buchi.LassoExtractor;
 import de.uni_freiburg.informatik.ultimate.automata.nestedword.buchi.NestedLassoRun;
-import de.uni_freiburg.informatik.ultimate.automata.nestedword.buchi.NestedLassoWord;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.IPetriNet;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.PetriNetLassoRun;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.PetriNetNot1SafeException;
@@ -24,6 +15,8 @@ import de.uni_freiburg.informatik.ultimate.automata.petrinet.netdatastructures.B
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.operations.BuchiPetriNet2FiniteAutomaton;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.operations.RemoveDead;
 import de.uni_freiburg.informatik.ultimate.automata.petrinet.operations.RemoveDeadBuchi;
+import de.uni_freiburg.informatik.ultimate.automata.petrinet.unfolding.BuchiIsEmpty;
+import de.uni_freiburg.informatik.ultimate.automata.petrinet.unfolding.PetriNetUnfolder.EventOrderEnum;
 import de.uni_freiburg.informatik.ultimate.automata.statefactory.StringFactory;
 import de.uni_freiburg.informatik.ultimate.core.model.services.ILogger;
 import de.uni_freiburg.informatik.ultimate.core.model.services.ILogger.LogLevel;
@@ -46,144 +39,203 @@ public class BuchiPetriTest {
 		sFactory = new StringFactory();
 	}
 
+	// @Test
+	// public void test1() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a", "b", "c", "d", "e");
+	// final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+	// petriNet.addPlace("p1", true, false);
+	// petriNet.addPlace("p2", false, false);
+	// petriNet.addPlace("p3", false, false);
+	// petriNet.addPlace("p4", false, false);
+	// petriNet.addPlace("p5", false, true);
+	// petriNet.addPlace("p6", false, false);
+	// petriNet.addPlace("p7", false, false);
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2", "p3", "p4")));
+	// petriNet.addTransition("b", ImmutableSet.of(Set.of("p2", "p3", "p4")), ImmutableSet.of(Set.of("p5", "p6")));
+	// petriNet.addTransition("c", ImmutableSet.of(Set.of("p5")), ImmutableSet.of(Set.of("p2", "p3")));
+	// petriNet.addTransition("d", ImmutableSet.of(Set.of("p6")), ImmutableSet.of(Set.of("p4")));
+	//
+	// petriNet.addTransition("e", ImmutableSet.of(Set.of("p6", "p5")), ImmutableSet.of(Set.of("p7")));
+	//
+	// final IPetriNet<String, String> abstraction = petriNet;
+	//
+	// checkEmptinessCorrect(abstraction, false);
+	//
+	// // reduceAbstraction(abstraction);
+	// }
+	//
+	// @Test
+	// public void test2() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a", "b", "c");
+	// final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+	// petriNet.addPlace("p1", true, true);
+	// petriNet.addPlace("p2", false, false);
+	// petriNet.addPlace("p3", false, false);
+	// petriNet.addPlace("p4", true, false);
+	// petriNet.addPlace("p5", false, false);
+	// petriNet.addPlace("p6", false, false);
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2")));
+	// petriNet.addTransition("b", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p5")));
+	// petriNet.addTransition("c", ImmutableSet.of(Set.of("p2", "p3")), ImmutableSet.of(Set.of("p4")));
+	// petriNet.addTransition("c", ImmutableSet.of(Set.of("p4", "p5")), ImmutableSet.of(Set.of("p3", "p6")));
+	// petriNet.addTransition("c", ImmutableSet.of(Set.of("p6")), ImmutableSet.of(Set.of("p1")));
+	//
+	// final IPetriNet<String, String> abstraction = petriNet;
+	//
+	// checkEmptinessCorrect(abstraction, true);
+	// }
+	//
+	// @Test
+	// public void test3() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a", "b", "c");
+	// final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+	// petriNet.addPlace("p1", false, true);
+	// petriNet.addPlace("p2", true, false);
+	// petriNet.addPlace("p3", false, false);
+	// petriNet.addPlace("p4", true, false);
+	// petriNet.addPlace("p5", true, false);
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p5")), ImmutableSet.of(Set.of("p1")));
+	// petriNet.addTransition("b", ImmutableSet.of(Set.of("p1", "p2", "p4")),
+	// ImmutableSet.of(Set.of("p2", "p3", "p5")));
+	// petriNet.addTransition("c", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p4")));
+	//
+	// final IPetriNet<String, String> abstraction = petriNet;
+	//
+	// checkEmptinessCorrect(abstraction, false);
+	// }
+	//
+	// @Test
+	// public void test4() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a");
+	// final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+	// petriNet.addPlace("p1", true, false);
+	// petriNet.addPlace("p2", false, false);
+	// petriNet.addPlace("p3", false, false);
+	// petriNet.addPlace("p4", false, true);
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2", "p3")));
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p2", "p3")), ImmutableSet.of(Set.of("p4")));
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p4")));
+	//
+	// final IPetriNet<String, String> abstraction = petriNet;
+	//
+	// checkEmptinessCorrect(abstraction, false);
+	//
+	// // reduceAbstraction(petriNet);
+	//
+	// }
+	//
+	// @Test
+	// public void test5() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a");
+	// final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+	// petriNet.addPlace("p1", true, false);
+	// petriNet.addPlace("p2", false, false);
+	// petriNet.addPlace("p3", false, true);
+	// petriNet.addPlace("p4", false, false);
+	// petriNet.addPlace("p5", true, false);
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2")));
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p2", "p5")), ImmutableSet.of(Set.of("p3", "p4")));
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p1")));
+	// petriNet.addTransition("a", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p5")));
+	//
+	// final IPetriNet<String, String> abstraction = petriNet;
+	//
+	// checkEmptinessCorrect(abstraction, false);
+	//
+	// reduceAbstraction(petriNet);
+	//
+	// }
+	//
+	// @Test
+	// public void testLassoWord() throws AutomataLibraryException {
+	// final Set<String> alphabet = Set.of("a", "b", "c", "d", "e");
+	// final var buchiAutomaton = new NestedWordAutomaton<>(mServices, new VpAlphabet<>(alphabet), sFactory);
+	//
+	// buchiAutomaton.addState(true, false, "q1");
+	// buchiAutomaton.addState(false, false, "q2");
+	// buchiAutomaton.addState(false, false, "qx");
+	// buchiAutomaton.addState(false, false, "q3");
+	// buchiAutomaton.addState(false, true, "q4");
+	// buchiAutomaton.addInternalTransition("q1", "a", "q2");
+	// buchiAutomaton.addInternalTransition("q2", "b", "qx");
+	// buchiAutomaton.addInternalTransition("qx", "b", "q2");
+	// buchiAutomaton.addInternalTransition("q2", "c", "q3");
+	// buchiAutomaton.addInternalTransition("q3", "d", "q4");
+	// buchiAutomaton.addInternalTransition("q4", "e", "q3");
+	//
+	// final var lasso = new GetAcceptedLassoWord<>(mServices, buchiAutomaton);
+	// // mLogger.info(lasso.getResult());
+	// final var extractor = new LassoExtractor<>(mServices, buchiAutomaton);
+	// mLogger.info("all lassos:");
+	// mLogger.info(extractor.getResult());
+	//
+	// // final NestedWord stem = NestedWord.nestedWord(new Word<>("a", "b", "b", "c", "d"));
+	// // final NestedWord loop = NestedWord.nestedWord(new Word<>("e", "d"));
+	// final NestedWord stem = NestedWord.nestedWord(new Word<>("a", "c"));
+	// final NestedWord loop = NestedWord.nestedWord(new Word<>("d", "e", "d"));
+	// final NestedLassoWord lassoWord = new NestedLassoWord<>(stem, loop);
+	// final var buchiAccepts = new BuchiAccepts<String, String>(mServices, buchiAutomaton, lassoWord);
+	// mLogger.info("does buchiAutomaton accept this lassoword?");
+	// mLogger.info(buchiAccepts.getResult());
+	//
+	// }
+	//
+	// public void understandingSccs() throws AutomataOperationCanceledException {
+	// final Set<String> alphabet = Set.of("a", "b", "c", "d", "e");
+	// final var buchiAutomaton = new NestedWordAutomaton<>(mServices, new VpAlphabet<>(alphabet), sFactory);
+	//
+	// buchiAutomaton.addState(true, false, "q1");
+	// buchiAutomaton.addState(false, false, "q2");
+	// buchiAutomaton.addState(false, false, "q3");
+	// buchiAutomaton.addInternalTransition("q1", "a", "q2");
+	// buchiAutomaton.addInternalTransition("q2", "a", "q3");
+	// buchiAutomaton.addInternalTransition("q3", "a", "q1");
+	// buchiAutomaton.addInternalTransition("q1", "a", "q3");
+	//
+	// final NestedWordAutomatonReachableStates<String, String> mBuchiAutomatonAccepting =
+	// new RemoveUnreachable<>(mServices, buchiAutomaton).getResult();
+	// final AutomatonSccComputation<String, String> sccComp = new AutomatonSccComputation<>(mServices,
+	// mBuchiAutomatonAccepting, mBuchiAutomatonAccepting.getStates(), mBuchiAutomatonAccepting.getStates());
+	// final Collection<StronglyConnectedComponent<String>> sccs = sccComp.getBalls();
+	// mLogger.info(sccs);
+	//
+	// }
+
 	@Test
-	public void test1() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a", "b", "c", "d", "e");
+	public void understandingUnfolding() throws AutomataOperationCanceledException, PetriNetNot1SafeException {
+		// final Set<String> alphabet = Set.of("a", "b", "c", "d", "e", "f", "g", "h");
+		final Set<String> alphabet = Set.of("a", "b", "c", "d", "e", "x");
 		final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
-		petriNet.addPlace("p1", true, false);
-		petriNet.addPlace("p2", false, false);
-		petriNet.addPlace("p3", false, false);
-		petriNet.addPlace("p4", false, false);
-		petriNet.addPlace("p5", false, true);
-		petriNet.addPlace("p6", false, false);
-		petriNet.addPlace("p7", false, false);
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2", "p3", "p4")));
-		petriNet.addTransition("b", ImmutableSet.of(Set.of("p2", "p3", "p4")), ImmutableSet.of(Set.of("p5", "p6")));
-		petriNet.addTransition("c", ImmutableSet.of(Set.of("p5")), ImmutableSet.of(Set.of("p2", "p3")));
-		petriNet.addTransition("d", ImmutableSet.of(Set.of("p6")), ImmutableSet.of(Set.of("p4")));
-
-		petriNet.addTransition("e", ImmutableSet.of(Set.of("p6", "p5")), ImmutableSet.of(Set.of("p7")));
-
-		final IPetriNet<String, String> abstraction = petriNet;
-
-		checkEmptinessCorrect(abstraction, false);
-
-		// reduceAbstraction(abstraction);
-	}
-
-	@Test
-	public void test2() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a", "b", "c");
-		final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
-		petriNet.addPlace("p1", true, true);
-		petriNet.addPlace("p2", false, false);
-		petriNet.addPlace("p3", false, false);
-		petriNet.addPlace("p4", true, false);
-		petriNet.addPlace("p5", false, false);
-		petriNet.addPlace("p6", false, false);
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2")));
-		petriNet.addTransition("b", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p5")));
-		petriNet.addTransition("c", ImmutableSet.of(Set.of("p2", "p3")), ImmutableSet.of(Set.of("p4")));
-		petriNet.addTransition("c", ImmutableSet.of(Set.of("p4", "p5")), ImmutableSet.of(Set.of("p3", "p6")));
-		petriNet.addTransition("c", ImmutableSet.of(Set.of("p6")), ImmutableSet.of(Set.of("p1")));
-
-		final IPetriNet<String, String> abstraction = petriNet;
-
-		checkEmptinessCorrect(abstraction, true);
-	}
-
-	@Test
-	public void test3() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a", "b", "c");
-		final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
-		petriNet.addPlace("p1", false, true);
-		petriNet.addPlace("p2", true, false);
-		petriNet.addPlace("p3", false, false);
-		petriNet.addPlace("p4", true, false);
-		petriNet.addPlace("p5", true, false);
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p5")), ImmutableSet.of(Set.of("p1")));
-		petriNet.addTransition("b", ImmutableSet.of(Set.of("p1", "p2", "p4")),
-				ImmutableSet.of(Set.of("p2", "p3", "p5")));
-		petriNet.addTransition("c", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p4")));
-
-		final IPetriNet<String, String> abstraction = petriNet;
-
-		checkEmptinessCorrect(abstraction, false);
-	}
-
-	@Test
-	public void test4() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a");
-		final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
-		petriNet.addPlace("p1", true, false);
-		petriNet.addPlace("p2", false, false);
-		petriNet.addPlace("p3", false, false);
-		petriNet.addPlace("p4", false, true);
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2", "p3")));
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p2", "p3")), ImmutableSet.of(Set.of("p4")));
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p4")));
-
-		final IPetriNet<String, String> abstraction = petriNet;
-
-		checkEmptinessCorrect(abstraction, false);
-
-		// reduceAbstraction(petriNet);
-
-	}
-
-	@Test
-	public void test5() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a");
-		final BoundedPetriNet<String, String> petriNet = new BoundedPetriNet<>(mServices, alphabet, false);
+		// Example from Kuechler BA.
+		// petriNet.addPlace("p1", true, false);
+		// petriNet.addPlace("p2", false, false);
+		// petriNet.addPlace("p3", false, true);
+		// petriNet.addPlace("p4", false, false);
+		// petriNet.addPlace("p5", false, false);
+		// petriNet.addPlace("p6", false, false);
+		// petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2")));
+		// petriNet.addTransition("b", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p3")));
+		// petriNet.addTransition("c", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p4")));
+		// petriNet.addTransition("d", ImmutableSet.of(Set.of("p2")), ImmutableSet.of(Set.of("p5")));
+		// petriNet.addTransition("e", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p6")));
+		// petriNet.addTransition("f", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p3")));
+		// petriNet.addTransition("g", ImmutableSet.of(Set.of("p5")), ImmutableSet.of(Set.of("p4")));
+		// petriNet.addTransition("h", ImmutableSet.of(Set.of("p6")), ImmutableSet.of(Set.of("p5")));
+		// Example with two branch cross-branch
 		petriNet.addPlace("p1", true, false);
 		petriNet.addPlace("p2", false, false);
 		petriNet.addPlace("p3", false, true);
 		petriNet.addPlace("p4", false, false);
-		petriNet.addPlace("p5", true, false);
 		petriNet.addTransition("a", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p2")));
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p2", "p5")), ImmutableSet.of(Set.of("p3", "p4")));
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p1")));
-		petriNet.addTransition("a", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p5")));
+		petriNet.addTransition("b", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p3")));
+		petriNet.addTransition("x", ImmutableSet.of(Set.of("p1")), ImmutableSet.of(Set.of("p3")));
+		petriNet.addTransition("c", ImmutableSet.of(Set.of("p2")), ImmutableSet.of(Set.of("p3")));
+		petriNet.addTransition("d", ImmutableSet.of(Set.of("p3")), ImmutableSet.of(Set.of("p4")));
+		petriNet.addTransition("e", ImmutableSet.of(Set.of("p4")), ImmutableSet.of(Set.of("p2")));
 
-		final IPetriNet<String, String> abstraction = petriNet;
-
-		checkEmptinessCorrect(abstraction, false);
-
-		reduceAbstraction(petriNet);
-
-	}
-
-	@Test
-	public void testLassoWord() throws AutomataLibraryException {
-		final Set<String> alphabet = Set.of("a", "b", "c", "d", "e");
-		final var buchiAutomaton = new NestedWordAutomaton<>(mServices, new VpAlphabet<>(alphabet), sFactory);
-
-		buchiAutomaton.addState(true, false, "q1");
-		buchiAutomaton.addState(false, false, "q2");
-		buchiAutomaton.addState(false, false, "qx");
-		buchiAutomaton.addState(false, false, "q3");
-		buchiAutomaton.addState(false, true, "q4");
-		buchiAutomaton.addInternalTransition("q1", "a", "q2");
-		buchiAutomaton.addInternalTransition("q2", "b", "qx");
-		buchiAutomaton.addInternalTransition("qx", "b", "q2");
-		buchiAutomaton.addInternalTransition("q2", "c", "q3");
-		buchiAutomaton.addInternalTransition("q3", "d", "q4");
-		buchiAutomaton.addInternalTransition("q4", "e", "q3");
-
-		final var lasso = new GetAcceptedLassoWord<>(mServices, buchiAutomaton);
-		// mLogger.info(lasso.getResult());
-		final var extractor = new LassoExtractor<>(mServices, buchiAutomaton);
-		mLogger.info("all lassos:");
-		mLogger.info(extractor.getResult());
-
-		// final NestedWord stem = NestedWord.nestedWord(new Word<>("a", "b", "b", "c", "d"));
-		// final NestedWord loop = NestedWord.nestedWord(new Word<>("e", "d"));
-		final NestedWord stem = NestedWord.nestedWord(new Word<>("a", "c"));
-		final NestedWord loop = NestedWord.nestedWord(new Word<>("d", "e", "d"));
-		final NestedLassoWord lassoWord = new NestedLassoWord<>(stem, loop);
-		final var buchiAccepts = new BuchiAccepts<String, String>(mServices, buchiAutomaton, lassoWord);
-		mLogger.info("does buchiAutomaton accept this lassoword?");
-		mLogger.info(buchiAccepts.getResult());
+		final var buchiIsEmpty = new BuchiIsEmpty<>(mServices, petriNet, EventOrderEnum.ERV, false, true);
+		mLogger.info(buchiIsEmpty.getResult());
+		final var run = buchiIsEmpty.getRun();
 
 	}
 
